web/projects/portal/src/app/composer/gui/ws/editor/ws-details-table-data.component.scss
/*!
 * This file is part of StyleBI.
 * Copyright (C) 2024  InetSoft Technology
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
:host {
  display: block;
  position: relative;
  width: 100%;
  height: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  font-size: 13px;
  line-height: 19px;
}

.table-data-container {
  /* Needs to be absolute instead of relative because otherwise the height in ie is sometimes
     calculated incorrectly. */
  position: absolute;
  overflow-x: hidden;
  overflow-y: auto;
}

.ws-table-headers {
  position: relative;
  z-index: 1;
}

.table-data {
  position: absolute;
  overflow-anchor: none;
  text-align: left
}

.table-data__table-height-pillar {
  overflow: hidden;
  position: relative;
}

.nth-child-parity-row {
  height: 0;
}

.table-data__row {
  display: flex; // prevent double click from selecting across div/cells
}

.table-data__cell {
  display: inline-block;
  padding: 1px 1px 1px 10px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-right: solid 1px var(--inet-default-border-color);
  border-bottom: solid 1px var(--inet-default-border-color);
  vertical-align: bottom;
}

.ws-table-numeric-column {
  text-align: right;
}

.drop-table {
  position: absolute;
  z-index: 3;
  left: 0;
  top: 0;
  background-color: transparent;
}

.drop-table__column {
  display: inline-block;
  height: 100%;
}

.edit-data-wrapper {
  display: block;
  position: absolute;
  overflow: visible;
  z-index: 2;
}

.input-edit-data {
  height: 100%;
  width: 100%;
  position: relative;
  z-index: 0;
  outline: none;
  background: white;
}

.resize-handle {
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  cursor: ew-resize;
  border-right-style: groove;
  border-right-width: 6px;
}

.column-resize-container {
  position: absolute;
  z-index: 1;
  left: 0;
  top: 0;
  background-color: transparent;
}

.edit-header-input-container {
  position: absolute;
  z-index: 1;
  top: 1px;
  left: 0;
  overflow: visible;
}

.edit-header-input {
  position: relative;
  height: 100%;
  width: 100%;
  font-weight: bold;
  outline: none;
}

.notifications-ws-details {
  position: fixed;
  right: 20px;
}

.table-data-loading-indicator {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;

  .loading-icon {
    font-size: 30px;
  }
}

